fix button shadow overflow bug in safari

--- a/src/css/_button.scss
+++ b/src/css/_button.scss
@@ -102,6 +102,7 @@ button[disabled] {
     background: var(--text-primary-color);
     opacity: 0;
     transition: opacity 0.2s;
+    border-radius: 2px;
   }
 
   &:hover {
@@ -187,7 +188,7 @@ button[disabled] {
 .button--floating {
   padding: 16px;
   border: 0;
-  border-radius: 28px;
+  border-radius: 50%;
   vertical-align: middle;
   color: var(--text-primary-color);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
@@ -204,6 +205,7 @@ button[disabled] {
     background: var(--text-primary-color);
     opacity: 0;
     transition: opacity 0.2s;
+    border-radius: 50%;
   }
 
   &:hover {
@@ -279,6 +281,7 @@ button[disabled] {
     transition: opacity 0.2s;
     opacity: 0;
     background: var(--text-secondary-color);
+    border-radius: 50%;
   }
 
   &:hover {
